--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,7 @@
         "node_modules"
     ],
     "include": [
-        "src/components"
+        "src/components",
+        "typings.d.ts",
     ]
 }
