--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@babel/plugin-transform-runtime": "^7.18.2",
     "@babel/preset-env": "^7.18.2",
     "@babel/preset-react": "^7.17.12",
+    "@babel/preset-typescript": "^7.17.12",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.5",
     "babel-loader": "^8.2.5",
