--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.5",
     "babel-loader": "^8.2.5",
+    "classnames": "^2.3.1",
     "css-loader": "^6.7.1",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.6.0",
